# agent_development_kit

./: 99_.ipynb  99_testing_scraping.py  README.md  config_shared.py  pyproject.toml
root_workflow_agent/: agent.py  agent_instructions.py  callbacks.py  config.py  structured_outputs.py  tools.py
simple_search_agent/: agent.py  agent_instructions.py  callbacks.py  config.py  structured_outputs.py  tools.py
web_scraping_agent/: agent.py  agent_instructions.py  config.py  structured_outputs.py  tools.py
web_search_loop_agent/: agent.py  agent_instructions.py  callbacks.py  config.py  structured_outputs.py  tools.py
